<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_number_of_players"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/players_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp">

                <RadioButton
                    android:id="@+id/players_3_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three"/>

                <RadioButton
                    android:id="@+id/players_4_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four"/>

                <RadioButton
                    android:id="@+id/players_5_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/five"/>

                <RadioButton
                    android:id="@+id/players_6_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/six"/>

                <RadioButton
                    android:id="@+id/players_7_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seven"/>

                <RadioButton
                    android:id="@+id/players_8_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eight"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/player_1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_1"/>

            <EditText
                android:id="@+id/player_2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_2"/>

            <EditText
                android:id="@+id/player_3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_3"/>

            <EditText
                android:id="@+id/player_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_4"/>

            <EditText
                android:id="@+id/player_5_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_5"/>

            <EditText
                android:id="@+id/player_6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_6"/>

            <EditText
                android:id="@+id/player_7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_7"/>

            <EditText
                android:id="@+id/player_8_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:inputType="text"
                android:hint="@string/player_8"/>

            <Button
                android:id="@+id/start_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/start_game"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>