...
    <string name="player_3">Enter player three\'s name</string>
    <string name="player_4">Enter player four\'s name</string>
    <string name="player_5">Enter player five\'s name</string>
    <string name="player_6">Enter player six\'s name</string>
    <string name="player_7">Enter player seven\'s name</string>
    <string name="player_8">Enter player eight\'s name</string>
    <string name="sufficient_players_error">Name fields cannot be empty</string>
    <string name="spy">Spy</string>

    <!-- Game Detail Strings -->
    <string name="game_detail_screen_title">SpyHunt</string>
    <string name="show_locations">Show Locations</string>
    <string name="hide_locations">Hide Locations</string>
...
